force-app/main/default/objects/Historico_Individual__c/Historico_Individual__c.object-meta.xml
<CustomObject>
    <label>Histórico de consentimiento</label>
    <nameField>
        <displayFormat>HC-{000000000}</displayFormat>
        <label>Nombre de Histórico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de consentimiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>