force-app/main/default/objects/Historico_Individual__c/fields/Accion_C112__c.field-meta.xml
<CustomField>
    <fullName>Accion_C112__c</fullName>
    <label>Acción C112</label>
    <length>255</length>
    <type>Text</type>
</CustomField>