force-app/main/default/objects/Historico_Individual__c/fields/Accion_C113__c.field-meta.xml
<CustomField>
    <fullName>Accion_C113__c</fullName>
    <label>Acción C113</label>
    <length>255</length>
    <type>Text</type>
</CustomField>