force-app/main/default/objects/Historico_Individual__c/fields/C112__c.field-meta.xml
<CustomField>
    <fullName>C112__c</fullName>
    <label>C112</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estados_de_consentimientos</valueSetName>
    </valueSet>
</CustomField>