force-app/main/default/objects/Historico_Individual__c/fields/C113__c.field-meta.xml
<CustomField>
    <fullName>C113__c</fullName>
    <label>C113</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estados_de_consentimientos</valueSetName>
    </valueSet>
</CustomField>