force-app/main/default/objects/Historico_Individual__c/fields/Canal_C111__c.field-meta.xml
<CustomField>
    <fullName>Canal_C111__c</fullName>
    <label>Canal C111</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canal_Individual</valueSetName>
    </valueSet>
</CustomField>