force-app/main/default/objects/Historico_Individual__c/fields/Canal_Captacion_C111__c.field-meta.xml
<CustomField>
    <fullName>Canal_Captacion_C111__c</fullName>
    <label>Canal Captación C111</label>
    <length>255</length>
    <type>Text</type>
</CustomField>