force-app/main/default/objects/Historico_Individual__c/fields/DNI_Individual__c.field-meta.xml
<CustomField>
    <fullName>DNI_Individual__c</fullName>
    <formula>Persona__r.DNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI Individual</label>
    <type>Text</type>
</CustomField>