force-app/main/default/objects/Historico_Individual__c/fields/Fecha_y_Hora_de_Captacion_C112__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_de_Captacion_C112__c</fullName>
    <label>Fecha y Hora de Captación C112</label>
    <length>255</length>
    <type>Text</type>
</CustomField>