force-app/main/default/objects/Historico_Individual__c/fields/Nombre_Historico__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Historico__c</fullName>
    <displayFormat>PH-{0000}</displayFormat>
    <label>Nombre Histórico</label>
    <type>AutoNumber</type>
</CustomField>