force-app/main/default/objects/Historico_Individual__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Históricos Individuales</relationshipLabel>
    <relationshipName>Hist_ricos_Individuales</relationshipName>
    <type>Lookup</type>
</CustomField>