force-app/main/default/objects/Historico_Individual__c/fields/Reason_C113__c.field-meta.xml
<CustomField>
    <fullName>Reason_C113__c</fullName>
    <label>Reason C113</label>
    <length>255</length>
    <type>Text</type>
</CustomField>