force-app/main/default/objects/Historico_Individual__c/fields/Sistema_Consumer_C113__c.field-meta.xml
<CustomField>
    <fullName>Sistema_Consumer_C113__c</fullName>
    <label>Sistema (Consumer) C113</label>
    <length>255</length>
    <type>Text</type>
</CustomField>