force-app/main/default/objects/Historico_Individual__c/fields/Usuario_Captacion_C112__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Captacion_C112__c</fullName>
    <label>Usuario Captación C112</label>
    <length>255</length>
    <type>Text</type>
</CustomField>